--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="layer">
                     <h3>Task</h3>
                     <p>Develop an aesthetically pleasing web-based timepiece, showcasing the current time seamlessly synchronized with your device's clock..</p>
-                    <a href="ttps://mariaamariei.github.io/mada/"><i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://mariaamariei.github.io/mada/"><i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
         </div>
